fixed small gap errors

--- a/styles/sass/partials/global/_footer.scss
+++ b/styles/sass/partials/global/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: $offBlack;
-    padding-top: 100px;
+    padding-top: 125px;
 
     .wrapper {
         @include flexRow;
@@ -14,6 +14,7 @@ footer {
     }
 
     .divContact {
+        flex: 1;
         text-align: left;
         .textContainer {
             padding-bottom: 0;
@@ -56,6 +57,7 @@ footer {
     }
 
     .divWidget {
+        flex: 1;
         text-align: right;
 
         p {
@@ -96,6 +98,7 @@ footer {
         display: block;
         border-top: 2px solid $grey;
         text-align: center;
+        margin-top: 50px;
     }
 
 }
