--- a/styles/sass/partials/global/_nav.scss
+++ b/styles/sass/partials/global/_nav.scss
@@ -8,10 +8,12 @@ nav {
     }
 
     .wrapper ul:first-of-type li {
+        flex: 1;
         margin-right: 36px;
     }
 
     .wrapper ul:last-of-type li {
+        flex: 1;
         position: relative;
         margin-left: 36px;
 
